--- a/Triton King/System/Main.storyboard
+++ b/Triton King/System/Main.storyboard
@@ -36,45 +36,54 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="165" id="beT-jw-Wr8" customClass="CategoryCell" customModule="Triton_King" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="165"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="116" id="beT-jw-Wr8" customClass="CategoryCell" customModule="Triton_King" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="116"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="beT-jw-Wr8" id="ZWz-Sb-aL5">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="165"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="116"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmE-df-gvI">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="165"/>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FmE-df-gvI">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="116"/>
                                                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                                    <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="L18-Bt-brv">
-                                                        <size key="itemSize" width="100" height="105"/>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" sectionInsetReference="safeArea" id="Tsd-V5-COU">
+                                                        <size key="itemSize" width="50" height="50"/>
                                                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                     </collectionViewFlowLayout>
                                                     <cells>
-                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="dhp-i2-DmH" customClass="ProductCell" customModule="Triton_King" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ProductCell" id="eYn-0u-Ds7" customClass="ProductCell" customModule="Triton_King" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="0.0" width="120" height="116"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="s4o-tI-cyT">
-                                                                <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                            <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="iQ3-w1-VQ8">
+                                                                <rect key="frame" x="0.0" y="0.0" width="120" height="116"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRK-iB-Zx0">
-                                                                        <rect key="frame" x="37" y="44" width="26.5" height="12"/>
-                                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bEW-He-AOw">
+                                                                        <rect key="frame" x="0.0" y="94.5" width="120" height="14.5"/>
+                                                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                                         <color key="textColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <nil key="highlightedColor"/>
                                                                     </label>
+                                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fnz-bO-Tfs">
+                                                                        <rect key="frame" x="8" y="8" width="104" height="78"/>
+                                                                    </imageView>
                                                                 </subviews>
                                                                 <constraints>
-                                                                    <constraint firstItem="jRK-iB-Zx0" firstAttribute="centerY" secondItem="s4o-tI-cyT" secondAttribute="centerY" id="x8M-Ka-rHY"/>
-                                                                    <constraint firstItem="jRK-iB-Zx0" firstAttribute="centerX" secondItem="s4o-tI-cyT" secondAttribute="centerX" id="ymZ-D3-gh1"/>
+                                                                    <constraint firstItem="Fnz-bO-Tfs" firstAttribute="top" secondItem="iQ3-w1-VQ8" secondAttribute="top" id="5Od-P5-BxP"/>
+                                                                    <constraint firstItem="Fnz-bO-Tfs" firstAttribute="leading" secondItem="iQ3-w1-VQ8" secondAttribute="leading" constant="8" id="68c-kN-3Xe"/>
+                                                                    <constraint firstItem="bEW-He-AOw" firstAttribute="top" secondItem="Fnz-bO-Tfs" secondAttribute="bottom" constant="9" id="SLp-XB-KLQ"/>
+                                                                    <constraint firstItem="bEW-He-AOw" firstAttribute="leading" secondItem="iQ3-w1-VQ8" secondAttribute="leading" id="XHq-Yg-5Mm"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="Fnz-bO-Tfs" secondAttribute="trailing" constant="8" id="j6L-qh-b31"/>
+                                                                    <constraint firstAttribute="trailing" secondItem="bEW-He-AOw" secondAttribute="trailing" id="jwe-oC-sDa"/>
+                                                                    <constraint firstAttribute="bottom" secondItem="bEW-He-AOw" secondAttribute="bottom" constant="7" id="tEs-s4-Fl9"/>
                                                                 </constraints>
                                                             </collectionViewCellContentView>
-                                                            <size key="customSize" width="100" height="100"/>
+                                                            <size key="customSize" width="120" height="116"/>
                                                             <connections>
-                                                                <outlet property="nameLabel" destination="jRK-iB-Zx0" id="g14-Jv-014"/>
+                                                                <outlet property="foodImageView" destination="Fnz-bO-Tfs" id="cHP-2C-vFu"/>
+                                                                <outlet property="foodNameLabel" destination="bEW-He-AOw" id="Quf-XH-3om"/>
                                                             </connections>
                                                         </collectionViewCell>
                                                     </cells>
@@ -85,10 +94,10 @@
                                                 </collectionView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="FmE-df-gvI" firstAttribute="leading" secondItem="ZWz-Sb-aL5" secondAttribute="leading" id="I61-AY-Bnd"/>
-                                                <constraint firstItem="FmE-df-gvI" firstAttribute="top" secondItem="ZWz-Sb-aL5" secondAttribute="top" id="ZuQ-lJ-yIB"/>
-                                                <constraint firstAttribute="trailing" secondItem="FmE-df-gvI" secondAttribute="trailing" id="dyT-aN-5Wm"/>
-                                                <constraint firstAttribute="bottom" secondItem="FmE-df-gvI" secondAttribute="bottom" id="ix8-Ii-o2a"/>
+                                                <constraint firstAttribute="bottom" secondItem="FmE-df-gvI" secondAttribute="bottom" id="7Vd-nP-7mJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="FmE-df-gvI" secondAttribute="trailing" id="Wty-ti-ziu"/>
+                                                <constraint firstItem="FmE-df-gvI" firstAttribute="top" secondItem="ZWz-Sb-aL5" secondAttribute="top" id="q14-hQ-9TU"/>
+                                                <constraint firstItem="FmE-df-gvI" firstAttribute="leading" secondItem="ZWz-Sb-aL5" secondAttribute="leading" id="vH5-2E-SgS"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -104,10 +113,10 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="leading" secondItem="CFj-fw-5Wm" secondAttribute="leading" id="9co-zy-Bwx"/>
-                            <constraint firstItem="CFj-fw-5Wm" firstAttribute="bottom" secondItem="vRj-Zv-vJQ" secondAttribute="bottom" id="JSK-T6-j3X"/>
-                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="top" secondItem="CFj-fw-5Wm" secondAttribute="top" id="WTx-M1-t7g"/>
-                            <constraint firstItem="CFj-fw-5Wm" firstAttribute="trailing" secondItem="vRj-Zv-vJQ" secondAttribute="trailing" id="fZY-gU-GVR"/>
+                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="leading" secondItem="CFj-fw-5Wm" secondAttribute="leading" id="0wN-JJ-kPF"/>
+                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="bottom" secondItem="CFj-fw-5Wm" secondAttribute="bottom" id="dDY-7A-oOy"/>
+                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="top" secondItem="CFj-fw-5Wm" secondAttribute="top" id="haE-Rh-nZW"/>
+                            <constraint firstItem="vRj-Zv-vJQ" firstAttribute="trailing" secondItem="CFj-fw-5Wm" secondAttribute="trailing" id="yBB-Ib-FGZ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CFj-fw-5Wm"/>
                     </view>
